[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/events/earthquake.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tileset/limit.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="earthquake" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 696.288, 599.998 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 698.117, 601.986 )
collision_layer = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="QuakeTimer" type="Timer" parent="Area2D"]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D/QuakeTimer" to="Area2D" method="_on_QuakeTimer_timeout"]
